fix: resolve timeline overlap by increasing padding and adjusting marker position

--- a/apps/web/src/app/(storefront)/about/about.module.css
+++ b/apps/web/src/app/(storefront)/about/about.module.css
@@ -220,7 +220,7 @@
 
 .timeline {
   position: relative;
-  padding-left: 3rem;
+  padding-left: 7rem;
 }
 
 .timeline::before {
@@ -240,10 +240,11 @@
 
 .timelineMarker {
   position: absolute;
-  left: -3rem;
+  left: -7rem;
   top: 0;
   display: flex;
   align-items: center;
+  width: 6rem;
 }
 
 .timelineDot {
